Fixed hidden track titles bug, spacing corrections

--- a/custom_bootstrap/store.less
+++ b/custom_bootstrap/store.less
@@ -1,5 +1,6 @@
 .page-store {
   background-color: white;
+  padding-top: 30px;
 }
 .cart_link {
   cursor: pointer;
@@ -100,6 +101,10 @@
   height: 20px;
   overflow: hidden;
 }
+.track_icon_right_group {
+  position: relative;
+  top: -20px;
+}
 .track_icon_left, .track_icon_right {
   display: block;
   width: 20px;
@@ -160,8 +165,10 @@
       font-size: 10px;
     }
   }
-  .gray_arrow_left, .gray_arrow_right, .blue_arrow_right {
-    width: 150px !important;
+  .modal-dialog {
+    .gray_arrow_left, .gray_arrow_right, .blue_arrow_right {
+      width: 150px !important;
+    }
   }
 }
 .cart_icon_right {
